feat: ✨ adds support for Shopify pages, navigation menus, and product collections

--- a/apps/web/src/pages/products/[slug].astro
+++ b/apps/web/src/pages/products/[slug].astro
@@ -1,4 +1,5 @@
 ---
+import Layout from "../../layouts/Page.astro";
 import { storefront } from "../../storefront";
 
 const { slug } = Astro.params;
@@ -10,16 +11,7 @@ if (!product) {
 }
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{product.name} | Storefront</title>
-  </head>
-  <body>
-    <h1>{product.name}</h1>
-    <Fragment set:html={product.descriptionHtml} />
-  </body>
-</html>
+<Layout>
+  <h1>{product.name}</h1>
+  <Fragment set:html={product.descriptionHtml} />
+</Layout>
