--- a/apps/web/src/pages/index.astro
+++ b/apps/web/src/pages/index.astro
@@ -1,31 +1,23 @@
 ---
+import Layout from "../layouts/Page.astro";
 import { storefront } from "../storefront";
 
 const products = await storefront.products.getAll({});
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>Storefront</title>
-  </head>
-  <body>
-    <h1>Storefront</h1>
-    <ul>
-      {
-        products.map((product) => (
-          <li>
-            <article>
-              <h3>
-                <a href={`/products/${product.slug}`}>{product.name}</a>
-              </h3>
-            </article>
-          </li>
-        ))
-      }
-    </ul>
-  </body>
-</html>
+<Layout>
+  <h1>Storefront</h1>
+  <ul>
+    {
+      products.map((product) => (
+        <li>
+          <article>
+            <h3>
+              <a href={`/products/${product.slug}`}>{product.name}</a>
+            </h3>
+          </article>
+        </li>
+      ))
+    }
+  </ul>
+</Layout>
