--- a/apps/web/src/layouts/Page.astro
+++ b/apps/web/src/layouts/Page.astro
@@ -1,8 +1,6 @@
 ---
-import { storefront } from "../storefront";
-
-const mainMenu = await storefront.site.getMenu("main-menu");
-const footerMenu = await storefront.site.getMenu("footer");
+import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
 ---
 
 <html lang="en">
@@ -14,32 +12,10 @@ const footerMenu = await storefront.site.getMenu("footer");
     <title>Storefront</title>
   </head>
   <body>
-    <header>
-      <a href="/">Storefront</a>
-      {
-        mainMenu && (
-          <nav>
-            {mainMenu.items.map((item) => (
-              <a href={item.url}>{item.name}</a>
-            ))}
-          </nav>
-        )
-      }
-    </header>
+    <Header />
     <main>
       <slot />
     </main>
-    <footer>
-      <small>&copy; 2024 All Rights Reserved</small>
-      {
-        footerMenu && (
-          <nav aria-label="Footer navigation">
-            {footerMenu.items.map((item) => (
-              <a href={item.url}>{item.name}</a>
-            ))}
-          </nav>
-        )
-      }
-    </footer>
+    <Footer />
   </body>
 </html>
