--- a/apps/web/src/pages/products/[slug].astro
+++ b/apps/web/src/pages/products/[slug].astro
@@ -13,5 +13,21 @@ if (!product) {
 
 <Layout>
   <h1>{product.name}</h1>
+  <form method="POST" action="/api/cart">
+    <input type="hidden" name="productId" value={product.id} />
+    <input type="hidden" name="variantId" value={product.variants[0]!.id} />
+    <fieldset>
+      <label for="quantity">Quantity</label>
+      <input
+        type="number"
+        min={1}
+        step="1"
+        id="quantity"
+        name="quantity"
+        placeholder="1"
+      />
+    </fieldset>
+    <button type="submit">Add to cart</button>
+  </form>
   <Fragment set:html={product.descriptionHtml} />
 </Layout>
