--- a/apps/web/src/components/ProductCard.astro
+++ b/apps/web/src/components/ProductCard.astro
@@ -1,5 +1,7 @@
 ---
 import type { Product } from "@withstorefront/storefront";
+import Button from "./Button.astro";
+import Price from "./Price.astro";
 
 export interface Props {
   product: Product;
@@ -22,20 +24,33 @@ const { product } = Astro.props;
   <h3>
     <a href={`/products/${product.slug}`}>{product.name}</a>
   </h3>
+  <Price value={product.price.value} />
   <form method="post" action="/api/cart">
     <input type="hidden" name="productId" value={product.id} />
     <input type="hidden" name="variantId" value={product.variants[0]!.id} />
     <input type="hidden" name="quantity" value="1" />
-    <button type="submit">Add to cart</button>
+    <Button type="submit" size="sm">Add to cart</Button>
   </form>
 </article>
 
 <style>
   article {
+    display: flex;
+    flex-direction: column;
+    gap: var(--space-xs-s);
     text-align: center;
   }
 
   img {
     aspect-ratio: 1;
+  }
+
+  h3 {
+    font-size: var(--font-size-1);
+    line-height: 1.1;
+  }
+
+  h3 a {
+    text-decoration: none;
   }
 </style>
